# frakt2

./: .dockerignore  .env.example  .env.worker  .gitignore  Cargo.toml  Dockerfile  crates.js  docker-compose.yaml  docker-compose.yml  entrypoint.sh  help.html  search-index.js  serverprof  settings.html  src-files.js
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
server/: Cargo.toml  all.html  index.html  sidebar-items.js
server/listener/: fn.handle_message.html  fn.start_server.html  index.html  sidebar-items.js
server/local_env/: fn.check_vars.html  index.html  struct.HOST.html  struct.LOOP_SLEEP_DURATION.html  struct.PORT.html  struct.RUST_ENV.html
server/pool/: index.html  sidebar-items.js  struct.Pool.html  struct.Worker.html
server/src/: lib.rs  listener.rs  local_env.rs  pool.rs  tasks.rs
server/src/portal/: mod.rs
server/src/rendering/: mod.rs
server/tasks/: fn.create_fractal_tasks.html  index.html  sidebar-items.js  struct.FractalParams.html  struct.Task.html
shared/: Cargo.toml  all.html  fn.add.html  index.html  macro.fragment_from_json_value!.html  macro.fragment_from_json_value.html  macro.loop_sleep!.html  macro.loop_sleep.html  sidebar-items.js
shared/colors/: constant.BLUE.html  constant.CYAN.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.WHITE.html  constant.YELLOW.html  index.html  sidebar-items.js
shared/logger/: fn.setup_logger.html  index.html  sidebar-items.js
shared/network/: fn.close_stream.html  fn.extract_message.html  fn.get_socket_addr.html  fn.receive_message.html  fn.send_message.html  index.html  sidebar-items.js
shared/src/: colors.rs  lib.rs  logger.rs  network.rs  toml_reader.rs  utils.rs
shared/src/dtos/: mod.rs  portal_dto.rs  rendering_data.rs  server_dto.rs
shared/src/env/: mod.rs
shared/src/logger/: mod.rs
shared/src/macros/: mod.rs
shared/src/models/: mod.rs
shared/src/networking/: error.rs  mod.rs  result.rs  server.rs  worker.rs
shared/src/rendering/: color.rs  mod.rs
shared/src/structs/: complex.rs  fractal_descriptor.rs  fragment.rs  fragment_request.rs  fragment_result.rs  fragment_task.rs  mod.rs  pixel_data.rs  pixel_intensity.rs  point.rs  range.rs  resolution.rs  u8data.rs
shared/structs/: index.html  sidebar-items.js
shared/structs/fractal_descriptor/: enum.FractalDescriptor.html  index.html  sidebar-items.js
shared/structs/fractals/: index.html  sidebar-items.js
shared/structs/fragment/: enum.Fragment.html  index.html  sidebar-items.js
shared/structs/fragment_request/: index.html  sidebar-items.js  struct.FragmentRequest.html
shared/structs/fragment_result/: index.html  sidebar-items.js  struct.FragmentResult.html
shared/structs/fragment_task/: index.html  (+2 more)
shared/tests/: complex.rs  mandelbrot.rs
shared/toml_reader/: index.html
shared/utils/: fn.random_string.html  index.html  sidebar-items.js
worker/: Cargo.toml  Config.toml  all.html  index.html  sidebar-items.js
worker/connect/: fn.connect_to_server.html  index.html  sidebar-items.js
worker/local_env/: fn.check_vars.html  index.html  sidebar-items.js  struct.HOST.html  struct.LOOP_SLEEP_DURATION.html  struct.PORT.html  struct.RUST_ENV.html
worker/src/: connect.rs  lib.rs  local_env.rs
(+133 files in other folders)
