[workspace]
members = [
    "worker",
    "server",
    "shared"
]

resolver = "2"
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'packed'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false