[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}
complex-rs = { path = "../complex-rs"}
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix = "0.13.3"
actix-web-actors = "4.3.0"
uuid = { version = "1.7.0", features = ["v4"] }
ctrlc = "3.4.2"
