[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.10"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
log = { version = "0.4.20" }
image = { version = "0.24.7" }
rand = { version = "0.8.5" }
rstest = "0.18.2"
env_logger = { version = "0.10.0" }
complex = {path = "../complex"}

