[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complex-rs = { path = "../complex-rs" }
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
error-iter = "0.4"
winit = "0.28"
winit_input_helper = "0.14"
pixels = "0.13.0"
