[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/bin/main.rs"

[dependencies]
toml = "0.8.10"
dotenv = { version = "0.15.0" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
chrono = { version = "0.4.31" }
function_name = { version = "0.3.0" }
log = { version = "0.4.20" }
rand = { version = "0.8.5" }
lazy_static = { version = "1.4.0" }
shared = { path = "../shared" }
clap = "3.0"
